update to servant 0.11 and stack lts-8.19, fix bugs with underscores, add haskell https support

--- a/modules/swagger-codegen/src/main/resources/haskell-servant/Types.mustache
+++ b/modules/swagger-codegen/src/main/resources/haskell-servant/Types.mustache
@@ -19,6 +19,7 @@ import qualified Data.Text as T
 import qualified Data.Map as Map
 import GHC.Generics (Generic)
 import Data.Function ((&))
+import Data.Time.Clock(UTCTime)
 {{#imports}}import {{import}}
 {{/imports}}
 
@@ -54,7 +55,7 @@ newtype {{classname}} = {{classname}} {{vendorExtensions.x-customNewtype}} deriv
 removeFieldLabelPrefix :: Bool -> String -> Options
 removeFieldLabelPrefix forParsing prefix =
   defaultOptions
-  {fieldLabelModifier = fromMaybe (error ("did not find prefix " ++ prefix)) . stripPrefix prefix . replaceSpecialChars}
+  { fieldLabelModifier = fromMaybe (error ("did not find prefix " ++ prefix)) . stripPrefix prefix . replaceSpecialChars }
   where
     replaceSpecialChars field = foldl (&) field (map mkCharReplacement specialChars)
     specialChars =
@@ -62,7 +63,4 @@ removeFieldLabelPrefix forParsing prefix =
       , {{/hasMore}}{{/specialCharReplacements}}
       ]
     mkCharReplacement (replaceStr, searchStr) = T.unpack . replacer (T.pack searchStr) (T.pack replaceStr) . T.pack
-    replacer =
-      if forParsing
-        then flip T.replace
-        else T.replace
+    replacer = if forParsing then flip T.replace else T.replace
