--- a/modules/swagger-codegen/src/main/resources/haskell-servant/API.mustache
+++ b/modules/swagger-codegen/src/main/resources/haskell-servant/API.mustache
@@ -5,29 +5,27 @@
 {-# LANGUAGE FlexibleInstances #-}
 {-# LANGUAGE GeneralizedNewtypeDeriving #-}
 {-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE OverloadedLists #-}
 {-# LANGUAGE RecordWildCards #-}
 {-# LANGUAGE TypeFamilies #-}
 {-# LANGUAGE TypeOperators #-}
 {-# LANGUAGE ViewPatterns #-}
-{-# OPTIONS_GHC
--fno-warn-unused-binds -fno-warn-unused-imports -fcontext-stack=328 #-}
+{-# OPTIONS_GHC -fno-warn-unused-binds -fno-warn-unused-imports #-}
 
 module {{title}}.API
   -- * Client and Server
   ( ServerConfig(..)
-  , {{title}}Backend
+  , {{title}}Backend(..)
   , create{{title}}Client
   , run{{title}}Server
   , run{{title}}Client
   , run{{title}}ClientWithManager
-  , {{title}}Client
   -- ** Servant
   , {{title}}API
   ) where
 
 import {{title}}.Types
 
-import Control.Monad.Except (ExceptT)
 import Control.Monad.IO.Class
 import Data.Aeson (Value)
 import Data.Coerce (coerce)
@@ -39,16 +37,17 @@ import Data.Text (Text)
 import qualified Data.Text as T
 import GHC.Exts (IsString(..))
 import GHC.Generics (Generic)
-import Network.HTTP.Client (Manager, defaultManagerSettings, newManager)
-import Network.HTTP.Types.Method (methodOptions)
+import Network.HTTP.Client (Manager, defaultManagerSettings, newManager, path, parseRequest_)
+import Network.HTTP.Client.TLS (tlsManagerSettings)
 import qualified Network.Wai.Handler.Warp as Warp
-import Servant (ServantErr, serve)
+import Servant (serve, Handler)
 import Servant.API
 import Servant.API.Verbs (StdMethod(..), Verb)
-import Servant.Client (Scheme(Http), ServantError, client)
+import Servant.Client (Scheme(Http,Https), ServantError, client, ClientM, runClientM, ClientEnv(..))
 import Servant.Common.BaseUrl (BaseUrl(..))
-import Web.HttpApiData
-
+import Data.Time.Clock(UTCTime)
+import qualified Data.ByteString.Char8 as C
+import Web.FormUrlEncoded(FromForm(..), ToForm(..), parseUnique)
 
 {{#apiInfo}}{{#apis}}{{#operations}}{{#operation}}{{#hasFormParams}}
 data {{vendorExtensions.x-formName}} = {{vendorExtensions.x-formName}}
@@ -56,24 +55,14 @@ data {{vendorExtensions.x-formName}} = {{vendorExtensions.x-formName}}
   , {{/hasMore}}{{/formParams}}
   } deriving (Show, Eq, Generic)
 
-instance FromFormUrlEncoded {{vendorExtensions.x-formName}} where
-  fromFormUrlEncoded inputs = {{vendorExtensions.x-formName}} <$> {{#formParams}}lookupEither "{{baseName}}" inputs{{#hasMore}} <*> {{/hasMore}}{{/formParams}}
+instance FromForm {{vendorExtensions.x-formName}} where
+  fromForm inputs = {{vendorExtensions.x-formName}} <$> {{#formParams}}parseUnique "{{baseName}}" inputs{{#hasMore}} <*> {{/hasMore}}{{/formParams}}
 
-instance ToFormUrlEncoded {{vendorExtensions.x-formName}} where
-  toFormUrlEncoded value =
+instance ToForm {{vendorExtensions.x-formName}} where
+  toForm value =
     [ {{#formParams}}("{{baseName}}", toQueryParam $ {{vendorExtensions.x-formPrefix}}{{vendorExtensions.x-formParamName}} value){{#hasMore}}
     , {{/hasMore}}{{/formParams}}
     ]{{/hasFormParams}}{{/operation}}{{/operations}}{{/apis}}{{/apiInfo}}
-
--- For the form data code generation.
-lookupEither :: FromHttpApiData b => Text -> [(Text, Text)] -> Either String b
-lookupEither key assocs =
-  case lookup key assocs of
-    Nothing -> Left $ "Could not find parameter " <> (T.unpack key) <> " in form data"
-    Just value ->
-      case parseQueryParam value of
-        Left result -> Left $ T.unpack result
-        Right result -> Right $ result
 
 {{#apiInfo}}
 -- | Servant type-level API, generated from the Swagger spec for {{title}}.
@@ -84,15 +73,15 @@ type {{title}}API
 {{/apiInfo}}
 
 -- | Server or client configuration, specifying the host and port to query or serve on.
-data ServerConfig = ServerConfig
-  { configHost :: String  -- ^ Hostname to serve on, e.g. "127.0.0.1"
-  , configPort :: Int      -- ^ Port to serve on, e.g. 8080
+data ServerConfig = ServerConfig {
+    configHttps :: Bool    -- ^ Should we use https, if not http.
+  , configHost :: String  -- ^ Hostname to serve on, e.g. "127.0.0.1"
+  , configPort :: Int     -- ^ Port to serve on, e.g. 8080
   } deriving (Eq, Ord, Show, Read)
 
 -- | List of elements parsed from a query.
-newtype QueryList (p :: CollectionFormat) a = QueryList
-  { fromQueryList :: [a]
-  } deriving (Functor, Applicative, Monad, Foldable, Traversable)
+newtype QueryList (p :: CollectionFormat) a = QueryList { fromQueryList :: [a] }
+  deriving (Functor, Applicative, Monad, Foldable, Traversable)
 
 -- | Formats in which a list can be encoded into a HTTP path.
 data CollectionFormat
@@ -145,59 +134,41 @@ formatSeparatedQueryList char = T.intercalate (T.singleton char) . map toQueryPa
 -- is a backend that executes actions by sending HTTP requests (see @create{{title}}Client@). Alternatively, provided
 -- a backend, the API can be served using @run{{title}}Server@.
 data {{title}}Backend m = {{title}}Backend
-  { {{#apis}}{{#operations}}{{#operation}}{{operationId}} :: {{& vendorExtensions.x-clientType}}{- ^ {{& notes}} -}{{#hasMore}}
+  { {{#apis}}{{#operations}}{{#operation}}{{vendorExtensions.x-operationId}} :: {{& vendorExtensions.x-clientType}}{- ^ {{& notes}} -}{{#hasMore}}
   , {{/hasMore}}{{/operation}}{{/operations}}{{#hasMore}}
   , {{/hasMore}}{{/apis}}
   }
-
-newtype {{title}}Client a = {{title}}Client
-  { runClient :: Manager -> BaseUrl -> ExceptT ServantError IO a
-  } deriving Functor
-
-instance Applicative {{title}}Client where
-  pure x = {{title}}Client (\_ _ -> pure x)
-  ({{title}}Client f) <*> ({{title}}Client x) =
-    {{title}}Client (\manager url -> f manager url <*> x manager url)
-
-instance Monad {{title}}Client where
-  ({{title}}Client a) >>= f =
-    {{title}}Client (\manager url -> do
-      value <- a manager url
-      runClient (f value) manager url)
-
-instance MonadIO {{title}}Client where
-  liftIO io = {{title}}Client (\_ _ -> liftIO io)
 {{/apiInfo}}
 
 {{#apiInfo}}
-create{{title}}Client :: {{title}}Backend {{title}}Client
+create{{title}}Client :: {{title}}Backend ClientM
 create{{title}}Client = {{title}}Backend{..}
   where
-    ({{#apis}}{{#operations}}{{#operation}}(coerce -> {{operationId}}){{#hasMore}} :<|>
+    ({{#apis}}{{#operations}}{{#operation}}(coerce -> {{vendorExtensions.x-operationId}}){{#hasMore}} :<|>
      {{/hasMore}}{{/operation}}{{/operations}}{{#hasMore}} :<|>
      {{/hasMore}}{{/apis}}) = client (Proxy :: Proxy {{title}}API)
 
 -- | Run requests in the {{title}}Client monad.
-run{{title}}Client :: ServerConfig -> {{title}}Client a -> ExceptT ServantError IO a
+run{{title}}Client :: ServerConfig -> ClientM a -> IO (Either ServantError a)
 run{{title}}Client clientConfig cl = do
-  manager <- liftIO $ newManager defaultManagerSettings
+  manager <- newManager (if configHttps clientConfig then tlsManagerSettings else defaultManagerSettings)
   run{{title}}ClientWithManager manager clientConfig cl
 
 -- | Run requests in the {{title}}Client monad using a custom manager.
-run{{title}}ClientWithManager :: Manager -> ServerConfig -> {{title}}Client a -> ExceptT ServantError IO a
+run{{title}}ClientWithManager :: Manager -> ServerConfig -> ClientM a -> IO (Either ServantError a)
 run{{title}}ClientWithManager manager clientConfig cl =
-  runClient cl manager $ BaseUrl Http (configHost clientConfig) (configPort clientConfig) ""
+  runClientM cl (ClientEnv manager $ BaseUrl (if configHttps clientConfig then Https else Http) (configHost clientConfig) (configPort clientConfig) (C.unpack $ path $ parseRequest_ "{{basePath}}"))
 {{/apiInfo}}
 
 {{#apiInfo}}
 -- | Run the {{title}} server at the provided host and port.
-run{{title}}Server :: MonadIO m => ServerConfig -> {{title}}Backend (ExceptT ServantErr IO)  -> m ()
+run{{title}}Server :: MonadIO m => ServerConfig -> {{title}}Backend Handler  -> m ()
 run{{title}}Server ServerConfig{..} backend =
   liftIO $ Warp.runSettings warpSettings $ serve (Proxy :: Proxy {{title}}API) (serverFromBackend backend)
   where
     warpSettings = Warp.defaultSettings & Warp.setPort configPort & Warp.setHost (fromString configHost)
     serverFromBackend {{title}}Backend{..} =
-      ({{#apis}}{{#operations}}{{#operation}}coerce {{operationId}}{{#hasMore}} :<|>
+      ({{#apis}}{{#operations}}{{#operation}}coerce {{vendorExtensions.x-operationId}}{{#hasMore}} :<|>
        {{/hasMore}}{{/operation}}{{/operations}}{{#hasMore}} :<|>
        {{/hasMore}}{{/apis}})
 {{/apiInfo}}
